--- a/SweepStakes/Sweep_Stakes.csproj
+++ b/SweepStakes/Sweep_Stakes.csproj
@@ -48,7 +48,7 @@
     <Compile Include="MarketingFirm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SweepStakes.cs" />
+    <Compile Include="SweepstakesClass.cs" />
     <Compile Include="SweepstakesQueueManager.cs" />
     <Compile Include="SweepstakesStackManager.cs" />
     <Compile Include="UserInterface.cs" />
